--- a/src/App.Scss
+++ b/src/App.Scss
@@ -1,3 +1,9 @@
-h1 {
-    color: red;
+@import './Sass/variables';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: $font;
 }
