--- a/src/App.Scss
+++ b/src/App.Scss
@@ -1,9 +1,8 @@
 @import './Sass/variables';
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: $font;
 }
