--- a/src/components/RegisterPage/style.scss
+++ b/src/components/RegisterPage/style.scss
@@ -1,13 +1,22 @@
 @import '../../Sass/variables';
 
+.ResContainer {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .Resbox {
   background-color: #ffffffc5;
   width: 70vw;
+  max-width: 900px;
   padding: 20px;
   border-radius: 15px;
   display: flex;
   justify-content: space-between;
-  margin: 4% auto;
 
   .logoimg {
     img {
@@ -24,7 +33,9 @@
     }
     margin-right: 20px;
     width: 500px;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+
 
     label {
       margin-left: 55px;
@@ -166,6 +177,11 @@
   width: 7%;
   max-width: 50px;
   margin: auto;
+}
+
+.click {
+  background-color: #000;
+  color:#fff;
 }
 
 @keyframes pop {
