--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -1,9 +1,15 @@
+body {
+  overflow-x: hidden;
+}
+
 .top {
   width: 100vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  
+  
   
   .head {
     
@@ -35,11 +41,11 @@
     // -------------------
 
     .search {
-        border-radius: 2px;
+        border: none ;
+        border-radius: 7px;
         height: 4vh;
         text-align: center;
-        transition: 1s;
-
+        box-shadow: 0px 0px 20px white;
     }
     .sear {
         transition: 1s;
@@ -47,11 +53,12 @@
     }
   }
   .corp{
-    width: 90%;
+    width: 80%;
       .view{
         
         h2 {
             color: white;
+            font-size: 1.5em;
         }
         
         }
