--- a/src/components/RecoveryPass/style.scss
+++ b/src/components/RecoveryPass/style.scss
@@ -5,6 +5,12 @@
   justify-content: center;
   align-items: center;
   
+  .return{
+      position: absolute;
+        top: 3%;
+        left: 2%;
+    }  
+  
   .RecoveyBox {
     background-color: rgba(255, 255, 255, 0.795);
     padding: 20px;
