--- a/src/components/Home/style.scss
+++ b/src/components/Home/style.scss
@@ -9,6 +9,13 @@ body {
   justify-content: center;
   align-items: center;
   background-color: rgba(34, 34, 34, 0.76);
+  .lo {
+    color: white;
+    position: absolute;  
+    text-shadow: 0px 0px 20px rgba(255, 255, 255, 0.829);
+    left: 3%;
+    font-size: large;
+  }
 
   .head {
     width: 30%;
